--- a/common/build.gradle
+++ b/common/build.gradle
@@ -15,6 +15,12 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [AROUTER_MODULE_NAME: project.getName()]
+            }
+        }
+
     }
 
     buildTypes {
@@ -39,13 +45,17 @@ dependencies {
     implementation "androidx.core:core-ktx:1.0.2"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     api 'com.even:commonrv:1.0.5'
-    implementation 'com.squareup.okhttp3:okhttp:4.0.1'
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.6.1'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    implementation 'com.squareup.retrofit2:converter-gson:2.6.1'
-    implementation 'com.squareup.retrofit2:retrofit:2.6.1'
+    //retrofit+rxjava相关
+    api 'com.squareup.okhttp3:okhttp:4.0.1'
+    api 'com.squareup.retrofit2:adapter-rxjava2:2.6.1'
+    api 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    api 'com.squareup.retrofit2:converter-gson:2.6.1'
+    api 'com.squareup.retrofit2:retrofit:2.6.1'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.0.1'
     implementation 'com.squareup.retrofit2:converter-scalars:2.6.1'
+    //ARouter
+    api 'com.alibaba:arouter-api:1.5.0'
+    annotationProcessor "com.alibaba:arouter-compiler:$arouter_compiler"
 
 }
 repositories {
