--- a/common/build.gradle
+++ b/common/build.gradle
@@ -56,6 +56,8 @@ dependencies {
     //ARouter
     api 'com.alibaba:arouter-api:1.5.0'
     annotationProcessor "com.alibaba:arouter-compiler:$arouter_compiler"
+    //EventBus
+    api 'org.simple:androideventbus:1.0.5.1'
 
 }
 repositories {
