--- a/common/build.gradle
+++ b/common/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     annotationProcessor "com.alibaba:arouter-compiler:$arouter_compiler"
     //EventBus
     api 'org.simple:androideventbus:1.0.5.1'
+    api 'com.google.android.material:material:1.1.0-alpha09'
 
 }
 repositories {
@@ -69,7 +70,7 @@ uploadArchives {
     repositories.mavenDeployer {
         pom.groupId = 'com.even'
         pom.artifactId = 'common'
-        pom.version = '1.0.0'
+        pom.version = '1.0.1'
         pom.packaging = 'arr'
         repository(url: "file:///D:/androidMaven/")
     }
