--- a/common/build.gradle
+++ b/common/build.gradle
@@ -2,7 +2,11 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
-
+kapt {
+    arguments {
+        arg("AROUTER_MODULE_NAME", project.getName())
+    }
+}
 android {
     compileSdkVersion 28
 
@@ -55,7 +59,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-scalars:2.6.1'
     //ARouter
     api 'com.alibaba:arouter-api:1.5.0'
-    annotationProcessor "com.alibaba:arouter-compiler:$arouter_compiler"
+    kapt "com.alibaba:arouter-compiler:$arouter_compiler"
     //EventBus
     api 'org.simple:androideventbus:1.0.5.1'
     api 'com.google.android.material:material:1.1.0-alpha09'
@@ -70,7 +74,7 @@ uploadArchives {
     repositories.mavenDeployer {
         pom.groupId = 'com.even'
         pom.artifactId = 'common'
-        pom.version = '1.0.2'
+        pom.version = '1.0.3'
         pom.packaging = 'arr'
         repository(url: "file:///D:/androidMaven/")
     }
