--- a/common/build.gradle
+++ b/common/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     //ARouter
     api 'com.alibaba:arouter-api:1.5.0'
     kapt "com.alibaba:arouter-compiler:$arouter_compiler"
+    annotationProcessor "com.alibaba:arouter-compiler:$arouter_compiler"
     //EventBus
     api 'org.simple:androideventbus:1.0.5.1'
     api 'com.google.android.material:material:1.1.0-alpha09'
@@ -74,7 +75,7 @@ uploadArchives {
     repositories.mavenDeployer {
         pom.groupId = 'com.even'
         pom.artifactId = 'common'
-        pom.version = '1.0.3'
+        pom.version = '1.0.5'
         pom.packaging = 'arr'
         repository(url: "file:///D:/androidMaven/")
     }
