--- a/common/build.gradle
+++ b/common/build.gradle
@@ -63,6 +63,8 @@ dependencies {
     annotationProcessor "com.alibaba:arouter-compiler:$arouter_compiler"
     //EventBus
     api 'org.simple:androideventbus:1.0.5.1'
+    //glide
+    api 'com.github.bumptech.glide:glide:4.9.0'
 
 }
 repositories {
@@ -74,7 +76,7 @@ uploadArchives {
     repositories.mavenDeployer {
         pom.groupId = 'com.even'
         pom.artifactId = 'common'
-        pom.version = '1.1.3'
+        pom.version = '1.1.4'
         pom.packaging = 'arr'
         repository(url: "file:///D:/androidMaven/")
     }
